--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="public/boy.png" />
+    <meta name="author" content="Kushal Pipaliya" />
+    <meta name="description" content="Smart Learning with KHP provides top-notch content about Cybersecurity." />
+    <meta name="keywords" content="Cybersecurity, Learning, Smart Learning, KHP, Cyber Security , kushal-pipaliya khp , kushal pipaliya Cybersecurity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:url" content="https://smartlearningwithkhp.netlify.app/" />
+    <meta property="og:title" content="Smart Learning with KHP" />
+    <meta property="og:image" content="https://smartlearningwithkhp.netlify.app/public/boy.png"/>
+    <meta property="og:description" content="Kushal Pipaliya: Web Developer Passionate about Cybersecurity." />
+    <meta property="og:type" content="website"/>
+    <meta property="og:locale" content="en_IN" />
+
+    <link rel="icon" type="image/png" href="public/boy.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KHP-SmartLearning</title>
+    <title>Smart Learning with KHP</title>
   </head>
   <body>
     <div id="root"></div>
