about update init

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://smartlearningwithkhp.netlify.app/" />
     <meta property="og:title" content="Smart Learning with KHP" />
     <meta property="og:image" content="https://smartlearningwithkhp.netlify.app/public/boy.png"/>
-    <meta property="og:description" content="Kushal Pipaliya: Web Developer Passionate about Cybersecurity." />
+    <meta property="og:description" content="Smart Learning with KHP provides top-notch content about Cybersecurity." />
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_IN" />
 
