--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="Kushal Pipaliya" />
     <meta name="description" content="Smart Learning with KHP provides top-notch content about Cybersecurity." />
-    <meta name="keywords" content="Cybersecurity, Learning, Smart Learning, KHP, Cyber Security , kushal-pipaliya khp , kushal pipaliya Cybersecurity" />
+    <meta name="keywords" content="Cybersecurity, Learning, Smart Learning, KHP, Kushal Pipaliya, Cyber Security, IT Security" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph Metadata -->
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_IN" />
 
-    <link rel="icon" type="image/png" href="public/boy.png"/>
+    <link rel="icon" type="image/png" href="https://smartlearningwithkhp.netlify.app/public/boy.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Learning with KHP</title>
   </head>
