--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- Open Graph Metadata -->
     <meta property="og:url" content="https://smartlearningwithkhp.netlify.app/" />
     <meta property="og:title" content="Smart Learning with KHP" />
-    <meta property="og:image" content="https://smartlearningwithkhp.netlify.app/public/boy.png"/>
+    <meta property="og:image" content="https://smartlearningwithkhp.netlify.app/boy.png"/>
     <meta property="og:description" content="Smart Learning with KHP provides top-notch content about Cybersecurity." />
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_IN" />
 
-    <link rel="icon" type="image/png" href="https://smartlearningwithkhp.netlify.app/public/boy.png"/>
+    <link rel="icon" type="image/png" href="https://smartlearningwithkhp.netlify.app/boy.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Learning with KHP</title>
   </head>
