--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="Kushal Pipaliya" />
-    <meta name="description" content="Smart Learning with KHP provides top-notch content about Cybersecurity." />
-    <meta name="keywords" content="Cybersecurity, Learning, Smart Learning, KHP, Kushal Pipaliya, Cyber Security, IT Security" />
+    <meta name="description" content="Smart Learning with KHP by Kushal Pipaliya offers expert-curated content on Cybersecurity, IT Security, and more. Enhance your skills with our comprehensive resources." />
+    <meta name="keywords" content="Cybersecurity, Learning, Smart Learning, KHP, Kushal Pipaliya, Cyber Security, IT Security, Information Security, Network Security, Ethical Hacking" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph Metadata -->
     <meta property="og:url" content="https://smartlearningwithkhp.netlify.app/" />
-    <meta property="og:title" content="Smart Learning with KHP" />
-    <meta property="og:image" content="https://smartlearningwithkhp.netlify.app/boy.png"/>
-    <meta property="og:description" content="Smart Learning with KHP provides top-notch content about Cybersecurity." />
+    <meta property="og:title" content="Smart Learning with KHP by Kushal Pipaliya | Expert Cybersecurity Resources" />
+    <meta property="og:image" content="https://smartlearningwithkhp.netlify.app/Logo.png"/>
+    <meta property="og:description" content="Discover top-notch Cybersecurity content curated by Kushal Pipaliya. Enhance your skills with Smart Learning KHP's comprehensive resources." />
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_IN" />
 
-    <link rel="icon" type="image/png" href="https://smartlearningwithkhp.netlify.app/boy.png"/>
+    <link rel="icon" type="image/png" href="/Logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Learning with KHP</title>
+    <title>Smart Learning with KHP by Kushal Pipaliya | Expert Cybersecurity Resources</title>
+    <link rel="canonical" href="https://smartlearningwithkhp.netlify.app/" />
   </head>
   <body>
     <div id="root"></div>
